--- a/AULA01/index.html
+++ b/AULA01/index.html
@@ -148,13 +148,11 @@
             <!-- footer -->
             <div class="row" text-center >
                 <div class="col">
-                    <nav class="navbar bg-body-tertiary justify-content-center" >
-                        <div class="container-fluid">
-                          <p class="navbar-text" class="center">
-                            Alguns direitos Reservados
-                          </p>
-                        </div>
-                      </nav>
+                    <ul class="nav justify-content-center">
+                        <li class="nav-item">
+                            <a class="nav-link disabled" aria-disabled="true">Alguns direitos reservados new jeans</a>
+                          </li>
+                    </ul>
                 </div>
             </div>
         </div> <!-- conteainer  -->
